fix: gives header z-index:3 to stop it dropping behind on sm screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ header {
     padding:0;
     height:150px;
     position: relative;
+    z-index:3;
 }
 
 .navbar-nav {
@@ -96,6 +97,7 @@ header {
     font-size:1.5rem;
     right:10px;
     bottom:3px;
+
 }
 
 .dropdown-menu {
